--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,13 +5,13 @@
   </ion-navbar>
   <ion-toolbar>
     <ion-row class="filters">
-      <ion-col><button ion-button (click)="goToSlide(0)"><ion-icon name="arrow-back"></ion-icon></button></ion-col>
+      <ion-col><button ion-button (click)="backupSlides()"><ion-icon name="arrow-back"></ion-icon></button></ion-col>
       <ion-col col-8>
       <ion-slides slidesPerView="9">
       <ion-slide *ngFor="let letter of letters$"><button ion-button full outline (click)="filterList(letter.alpha[0])">{{letter.alpha}}</button></ion-slide>
       </ion-slides>
       </ion-col>
-      <ion-col><button ion-button (click)="goToSlide(25)"><ion-icon name="arrow-forward"></ion-icon></button></ion-col>
+      <ion-col><button ion-button (click)="advanceSlides()"><ion-icon name="arrow-forward"></ion-icon></button></ion-col>
     </ion-row>
     <ion-row>
       <ion-col col-6 text-right align-self-center> 
@@ -36,10 +36,6 @@
                     <ion-icon name="call"></ion-icon>
                     Call
                   </button>
-              <button ion-button color="primary" (click)="sendSms(employee.mobile_phone)">
-                <ion-icon name="text"></ion-icon>
-                Text
-              </button>
             </ion-item-options>
             <ion-item-options side="left">
               <button ion-button color="dark" (click)="saveContact(employee.phone_user_name, employee.mobile_phone)">
@@ -49,7 +45,6 @@
           </ion-item-options>
     </ion-item-sliding> 
   </ion-list>
-
   <button ion-button (click)="refreshData()">Refresh Data</button>
   <button ion-button (click)="filterList('')">Clear Filter</button>
 </ion-content>
